fixed auth using clerkdev